# c3x

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/: hooks.json
docs/: agent-telemetry.md  architecture.md  plan.md  testing-guidelines.md
scripts/: backfill-review-results  c3x-metrics  setup.sh  validate-setup.sh  validate-teardown.sh
skills/c3x-plan-ingest/: SKILL.md
skills/flow-architect/: SKILL.md
skills/flow-conflict-resolver/: SKILL.md
skills/flow-critic/: SKILL.md
skills/flow-reviewer/: SKILL.md
skills/flow-shared/: SKILL.md
skills/flow-verify/: SKILL.md
skills/flow-verify/reference/: verify-skill-guidelines.md
skills/flow-worker/: SKILL.md
src/c3x/: __init__.py  agent.py  beads.py  cli.py  config.py  gitops.py  metrics.py  paths.py  prompt_policy.py  schema.py  verify.py
src/c3x/prompts/: caveman_mode.md
tests/: test_agent.py  test_beads.py  test_c3x_plan_ingest_skill.py  test_cli.py  test_config.py  test_gitops.py  test_metrics.py  test_review.py  test_verify.py
tests/fixtures/: fake-agy  fake-codex  fake-opencode
tests/fixtures/c3x-plan-ingest/: simple-plan.md
